tests/unit-fail-compilation/incompatible-compare.ref
File: incompatible-compare.c
Line: 5
Error: CV-CERL5
Description: Incompatible types in relational expression.
Type: Constraint violation.
See also: C11 sec. 6.5.8:2
Translation failed (config dumped). Run kcc -d incompatible-compare.c to see commands run.
